Initial commit. Made a basic AI model