@@ -2,7 +2,7 @@ import java.util.*;
 
 public class KNearestNeighbours {
     private double k; // amount of neighbours
-    private List<IrisData> trainDataSet;
+    private final List<IrisData> trainDataSet;
 
     public KNearestNeighbours(double k, List<IrisData> trainDataSet) {
         this.k = k;
@@ -11,21 +11,22 @@ public class KNearestNeighbours {
 
     private static double calculateEuclideanDistance(IrisData data, IrisData data2) {
         float[] feature1 = data.getFeaturesOfIris();
-        float[] feature2 = data.getFeaturesOfIris();
+        float[] feature2 = data2.getFeaturesOfIris();
         double sum=0.0;
 
         for (int i = 0; i < feature1.length; i++) {
             double diffBetweenVectors = feature1[i]-feature2[i];
-            sum+=diffBetweenVectors;
+            sum+=diffBetweenVectors*diffBetweenVectors;
         }
-        return Math.sqrt(sum);
 
+        return Math.sqrt(sum);
     }
 
     private static void sortDistances(List<double[]> distances) {
         for (int i = 0; i < distances.size(); i++) {
             double[] current = distances.get(i);
-        double currentDistance = current[0];
+            double currentDistance = current[0];
+
             int j = i-1;
             while(j>=0 && distances.get(j)[0] > currentDistance) {
                 distances.set(j+1,distances.get(j));
@@ -33,11 +34,11 @@ public class KNearestNeighbours {
             }
             distances.set(j + 1, current);
         }
-        //*
-        //QuickSort algo
-        // start with 1(thinking that firtst elem stands correct)
+
+        //Insertion algo
+        // start with 1(thinking that first elem stands correct)
         // [ 4.2, 1.5, 3.7, 2.0 ]  | for (int i = 0; i < distances.size(); i++) // going through distances
-        // [ 4.2, (1.5), 3.7, 2.0 ] | first index = 1 and distance = 1.5 so we will try to find correct place for him
+        // [ 4.2, (1.5), 3.7, 2.0 ] | first index = 1 and distance = 1.5, so we will try to find correct place for him
         // [ 4.2, (1.5), 3.7, 2.0 ] | j=i-1 last elem of sorted part of arr now its 0
         // [ 4.2, (1.5), 3.7, 2.0 ] |  //if distance[j][0] > currentDistance <<current>> should stand before him
         // [ (4.2), 4.2, 3.7, 2.0 ] | //move 4.2 to +1 index to the right and decrease j--
@@ -60,7 +61,7 @@ public class KNearestNeighbours {
 
 
         if(mostFrequentClasses.size() == 1) { // if only 1 or the same amount of classes in the most fre... we will peek at random
-            return mostFrequentClasses.get(0);
+            return mostFrequentClasses.getFirst();
         } else {
             Random random = new Random();
             return mostFrequentClasses.get(random.nextInt(mostFrequentClasses.size()));
